# shipping

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
shipping/: LICENSE  __main__.py  commands.py  environment.py  log.py  package.py
shipping/cli/: base.py  check.py  config.py  deploy.py  provision.py
shipping/configs/: base_config.py
shipping/deploy/: conda.py
tests/: conftest.py  test_package.py  test_shipping.py
tests/cli/: conftest.py  test_base_cmd.py  test_check_cmd.py  test_deploy_cmd.py  test_provision_cmd.py
tests/fixtures/configs/: basic.yaml  faulty_host.yml
